Fix a few layout issues (move from default to base)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -51,7 +51,7 @@ body {
 	[class*="col-"] {
 		float: left;
 		padding-right: 2em;
-		height: 100%;
+		/* height: 100%; */
 	}
 	
 	[class*='col-']:last-of-type {
